Fix artwork image styles to avoid stretching

--- a/assets/css/artwork.scss
+++ b/assets/css/artwork.scss
@@ -2,8 +2,8 @@
   position: relative;
 
   img {
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
 
   .play-button {
