--- a/assets/css/item.scss
+++ b/assets/css/item.scss
@@ -12,10 +12,6 @@
 
     .artwork {
       grid-area: artwork;
-
-      img {
-        height: 100%;
-      }
     }
 
     .meta {
